2004-09-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Flocale.c (FlocaleGetNameProperty):
	fixed freeing uninitialized pointer

2004-09-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (select_cmd):
	(direction_cmd):
	(CMD_NoWindow):
	(CMD_All):
	fixed conditional return code in Pick, PointerWindow, ThisWindow, All,
	WindowId and Direction commands; fixes break from these commands

	* fvwm/geometry.c (get_shaded_geometry):
	shading geometry fix for windows without decoration

	* libs/FScreen.c (XineramaQueryExtension):
	fixed xinerama crash

2004-09-04  Scott Smedley  <scottie7@tpg.com.au>

	* configure.in:
	Parse man pages with config.status so man pages have correct date.
	Man pages also specify FVWM version that they relate to.

	The following man pages were renamed to have a .in suffix.
	ie. bin/fvwm-bug.1 renamed to bin/fvwm-bug.1.in

	* bin/fvwm-bug.1:
	* bin/fvwm-config.1:
	* bin/fvwm-convert-2.2.1:
	* bin/fvwm-convert-2.4.1:
	* bin/fvwm-convert-2.6.1:
	* bin/fvwm-menu-desktop.1:
	* bin/fvwm-root.1:
	* modules/FvwmAnimate/FvwmAnimate.1:
	* modules/FvwmAuto/FvwmAuto.1:
	* modules/FvwmBacker/FvwmBacker.1:
	* modules/FvwmBanner/FvwmBanner.1:
	* modules/FvwmButtons/FvwmButtons.1:
	* modules/FvwmCommand/FvwmCommand.1:
	* modules/FvwmConsole/FvwmConsole.1:
	* modules/FvwmConsole/FvwmConsoleC.pl.1:
	* modules/FvwmCpp/FvwmCpp.1:
	* modules/FvwmDragWell/FvwmDragWell.1:
	* modules/FvwmEvent/FvwmEvent.1:
	* modules/FvwmForm/FvwmForm.1:
	* modules/FvwmGtk/FvwmGtk.1:
	* modules/FvwmIconBox/FvwmIconBox.1:
	* modules/FvwmIconMan/FvwmIconMan.1:
	* modules/FvwmIdent/FvwmIdent.1:
	* modules/FvwmM4/FvwmM4.1:
	* modules/FvwmPager/FvwmPager.1:
	* modules/FvwmProxy/FvwmProxy.1:
	* modules/FvwmRearrange/FvwmRearrange.1:
	* modules/FvwmSave/FvwmSave.1:
	* modules/FvwmSaveDesk/FvwmSaveDesk.1:
	* modules/FvwmScript/FvwmScript.1:
	* modules/FvwmScroll/FvwmScroll.1:
	* modules/FvwmTaskBar/FvwmTaskBar.1:
	* modules/FvwmTheme/FvwmTheme.1: